fixed the dark mode btn`s size

--- a/PhiloApp/static/css/dark-styles.css
+++ b/PhiloApp/static/css/dark-styles.css
@@ -17,7 +17,7 @@
   --text-color: #ffffff;
   --navbar-bg: #2f364e;
   --card-bg: linear-gradient(180deg, #99afcd 0%, #565675 100%);
-  --header-text: #c9cacd;
+  --header-text: #ffffff;
   --philo-section: rgb(50, 65, 109);
   --bg-IMG:url("images/dark-back.jpg");
   --footer-a: #b1c3e8;
