--- a/PhiloApp/static/css/styles.css
+++ b/PhiloApp/static/css/styles.css
@@ -16,23 +16,23 @@ body {
 }
 
 h1 {
-  color: #4a5d7e; /* Dark blue for headings */
-  text-align: center; /* Center-align headings */
+  color: #4a5d7e;
+  text-align: center;
 }
 
 h2,
 h3 {
-  color: #4a5d7e; /* Dark blue for headings */
-  text-align: center; /* Center-align headings */
+  color: #4a5d7e; 
+  text-align: center; 
 }
 
 a {
-  color: #4a5d7e; /* Light blue for links */
+  color: #4a5d7e; 
   text-decoration: none;
 }
 
 a:hover {
-  color: #4a5d7e; /* Darker blue on hover */
+  color: #4a5d7e;
   text-decoration: underline;
 }
 
@@ -87,24 +87,24 @@ header p {
 
 /* Intro Section */
 .intro-section {
-  background-color: #b7d8f1; /* Light blue background */
+  background-color: #b7d8f1; 
   padding: 40px 0;
   text-align: center;
 }
 
 .intro-section h2 {
-  color: #102c8ed3; /* Dark blue heading */
+  color: #102c8ed3; 
   margin-bottom: 20px;
 }
 
 .intro-section p {
   font-size: 1.1rem;
-  color: #4a5d7e; /* Dark grey text */
+  color: #4a5d7e; 
   max-width: 800px;
   margin: 0 auto;
 }
 
-/* Philosophers and Schools Sections */
+
 .philosophers-section
  {
   width: 100%;
@@ -122,7 +122,7 @@ header p {
 .philosophers-section p
  {
   font-size: 1.1rem;
-  color: #4a5d7e; /* Dark grey text */
+  color: #4a5d7e; 
   margin-bottom: 20px;
 }
 
@@ -156,7 +156,7 @@ footer a:hover {
   background-color: #789dbc;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  position: sticky;
+  position: relative;
   top: 0;
   z-index: 100;
 } 
@@ -330,14 +330,20 @@ footer a:hover {
   display: none; /* Hidden by default */
 }
 
+.theme-toggle-btn {
+    position: absolute;  /* Change from relative to absolute */
+    right: 20px;         /* Add this to position from the right */
+    top: 50%;            /* Center vertically */
+    transform: translateY(-50%); 
+    cursor: pointer;
+    z-index: 100;
+    background: transparent; /* Make background transparent */
+    border: none;           /* Remove border */
+    padding: 0;  
+    font-size: 1.8rem;
+    transition: transform 0.2s ease;
 
-
-/* @media (max-width: 242px) {
-  .topnav a:not(.active) {
-    display: none;
-  }
-  .topnav a.active {
-    width: 100%;
-    text-align: center;
-  }
-} */
+}
+.theme-toggle-btn:hover {
+    transform: translateY(-50%) scale(1.1); /* Slightly enlarge on hover */
+}
